# ETH-zurich

./: README.md
ex1/.catkin_tools/profiles/default/: devel_collisions.txt
ex1/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
ex2/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
ex2/logs/smb_hl_control/: build.make.002.log.stderr  build.make.003.log.stderr  build.make.004.log.stderr  build.make.006.log.stderr
ex2/src/smb_hl_control/: CMakeLists.txt  package.xml
ex2/src/smb_hl_control/launch/: ex2_gazebo.launch
ex2/src/smb_hl_control/src/: smb_highlevel_controller.cpp
ex3/: frames.gv
ex3/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
ex3/logs/smb_hl_control/: build.make.001.log.stderr  build.make.002.log.stderr  build.make.005.log.stderr  build.make.008.log.stderr  build.make.009.log.stderr  build.make.010.log.stderr  build.make.011.log.stderr  build.make.012.log.stderr  build.make.013.log.stderr  build.make.014.log.stderr  build.make.015.log.stderr  build.make.016.log.stderr  build.make.017.log.stderr  build.make.019.log.stderr  build.make.021.log.stderr  build.make.023.log.stderr  build.make.034.log.stderr  build.make.048.log.stderr
ex3/src/smb_hl_control/: CMakeLists.txt
ex4/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
(+164 files in other folders)
